# prox-github-runner

./: .gitignore  .yamllint.yml  CLAUDE.md  Makefile  README.md  ansible.cfg  pyproject.toml  requirements-dev.txt
.github/: actionlint.yaml
docs/: preflight.md  proxmox-template.md  smoke-workflow.md
docs/superpowers/plans/: 2026-05-20-sprint-1-foundation-preflight.md  2026-05-20-sprint-2-proxmox-template.md  2026-05-20-sprint-2-template-review-fixes.md  2026-07-10-multi-site-runner-support.md  2026-07-10-paper-archives-runner-support.md
docs/superpowers/specs/: 2026-05-20-proxmox-github-runner-mvp-design.md  2026-07-10-multi-site-runner-support-design.md  2026-07-10-paper-archives-runner-support-design.md
inventory/: hosts.yml
inventory/group_vars/all/: vars.yml  (+2 more)
playbooks/: check-runner-health.yml  preflight.yml  provision-runner-vm.yml  provision-template.yml  run-smoke-workflow.yml  setup-runner.yml  site.yml  unregister-runner.yml
scripts/: github_preflight.py
templates/: paper-archives-smoke.yml
tests/: __init__.py  mock_github.py  test_github_preflight_api.py  test_github_preflight_core.py  test_github_preflight_workflows.py  test_github_runner_hooks.py  test_github_runner_role.py  test_health_playbook.py  test_preflight_playbook.py  test_proxmox_template_inventory.py  test_proxmox_template_role.py  test_proxmox_vm_role.py  test_run_smoke_playbook.py  test_runner_cleanup_script.py  test_runner_guard_script.py  test_runner_host_role.py  test_setup_runner_playbook.py  test_site_playbook.py  test_smoke_workflow_template.py  test_unregister_playbook.py
(+34 files in other folders)
